# GamePrototype

./: CMakeLists.txt  build.bat  run.bat
source/: animation.cpp  animation.hpp  animator.cpp  animator.hpp  direction.hpp  game.cpp  game.hpp  game_scene.cpp  game_scene.hpp  main.cpp  next_scene.cpp  next_scene.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  sprite.hpp
